Test/hofs/LambdaParsefail2.dfy.expect
LambdaParsefail2.dfy(6,39): error: invalid LambdaArrow
1 parse errors detected in LambdaParsefail2.dfy
